--- a/index.html
+++ b/index.html
@@ -14,17 +14,18 @@
   <header>
     <h1>Matching Days</h1>
   </header>
-  <div class="wrapper">
+    <div class="wrapper">
      <div class="box" >Sunday</div>
      <div class="box" >Monday</div>
-     <div class="box" >Tuesday
-     </div><div class="box" >Wednesday</div>
+     <div class="box" >Tuesday</div>
+    <div class="box" >Wednesday</div>
      <div class="box">Thursday</div>
      <div class="box">Friday</div>
      <div class="box">Saturday</div>
      </div>
      <label for="">First date: </label><input id="First_date" class="first"  type="date" />
-     <label for="">Second date: </label><input id="First_date"  class="Second"  type="date"/>
+
+     <label for="">Second date: </label><input id="Second_date" class="second"  type="date"/>
 
     <script src="./js/Matching-days.js"></script>
   <script src="./js/Matching-days-DOM.js"></script>
