--- a/test.html
+++ b/test.html
@@ -17,8 +17,8 @@
     var assert = chai.assert;
   </script>
 
-  <script src="js/.js" charset="utf-8"></script>
-  <script src="test/.test.js" charset="utf-8"></script>
+  <script src="js/Matching-days.js" charset="utf-8"></script>
+  <script src="test/Matching-days.test.js" charset="utf-8"></script>
 
   <script>
     mocha.checkLeaks();
