--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Matching Days</title>
   <link rel="stylesheet" href="css/simple-grid.css">
   <link rel="stylesheet" href="css/Matching-days.css">
@@ -28,19 +27,24 @@
     <div class="container">
     <div class="row">
       <div class="col-12">
-          <h1>Matching Days</h1>
+          <h1>Matching Days App</h1>
       </div>
     </div>
   </div>
   </header>
+  <div class="container">
     <div class="wrapper">
 
+
      </div>
+     <div class="row">
+     <label for="" class="First_Date">First date: </label>
+     <input id="First_date" class="first"  type="date" />
 
-     <label for="">First date: </label><input id="First_date" class="first"  type="date" />
-
-     <label for="">Second date: </label><input id="Second_date" class="second"  type="date"/>
-
+     <label for="" class="Second_Date">Second date: </label
+      ><input id="Second_date" class="second"  type="date"/>
+    </div>
+    </div>
 
      <footer>Ayabonga Booi</footer>
     <script src="./js/Matching-days.js"></script>
